Fixed scrollbar at bottom caused from overflow.

--- a/src/Pages/Home/Components/CMLogo.css
+++ b/src/Pages/Home/Components/CMLogo.css
@@ -3,7 +3,6 @@
   font-weight: bold;
   font-family: 'Times New Roman', Times, serif;
   color: white;
-  margin-right: 1200px;
   margin-left: 100px;
   justify-content: center;
 }
@@ -13,7 +12,6 @@
   font-weight: bold;
   font-family: 'Times New Roman', Times, serif;
   color: white;
-  margin-right: 1200px;
   margin-left: 100px;
   margin-bottom: 20px;
   justify-content: center;
@@ -29,9 +27,9 @@
   }
 
   .CMContainer{
+    display: inline-block;
     position: relative;
-    align-content: center;
     margin-top: 100px;
     left: 50%;
-    transform: translate(-45%, -270%);
+    transform: translate(-180%, -250%);
   }
